add: episodes list

--- a/src/app/components/pages/episodes/episodes.component.html
+++ b/src/app/components/pages/episodes/episodes.component.html
@@ -1,1 +1,7 @@
-<p>episodes works!</p>
+<section>
+    <ul>
+        <li *ngFor="let episode of episodes$ | async">
+            {{ episode.episode }} - {{episode.name}}
+        </li>
+    </ul>
+</section>
