--- a/src/app/components/pages/characters/character-list/character-list.component.html
+++ b/src/app/components/pages/characters/character-list/character-list.component.html
@@ -1,2 +1,3 @@
-<p>character-list works!</p>
-{{characters$ | async | json}}
+<section>
+    <app-character-card *ngFor="let character of characters$ | async" [character]="character"></app-character-card>
+</section>
