--- a/src/app/components/pages/characters/character-list/character-list.component.html
+++ b/src/app/components/pages/characters/character-list/character-list.component.html
@@ -1,3 +1,3 @@
-<section>
+<section class="flex overflow-scroll">
     <app-character-card *ngFor="let character of characters$ | async" [character]="character"></app-character-card>
 </section>
