--- a/src/app/components/pages/characters/character-details/character-details.component.html
+++ b/src/app/components/pages/characters/character-details/character-details.component.html
@@ -1,1 +1,5 @@
-<p>character-details works!</p>
+
+<p-dialog header="Title" [(visible)]="display" (onHide)="closeDialog()">
+    Content
+    {{character|json}}
+</p-dialog>
