add: character details styles

--- a/src/app/components/pages/characters/character-details/character-details.component.html
+++ b/src/app/components/pages/characters/character-details/character-details.component.html
@@ -1,5 +1,27 @@
-
-<p-dialog header="Title" [(visible)]="display" (onHide)="closeDialog()">
-    Content
-    {{character|json}}
+<p-dialog
+  header="{{ character.name }}"
+  [(visible)]="display"
+  (onHide)="closeDialog()"
+>
+  <article class="grid">
+    <p-image
+      src="{{ character.image }}"
+      alt="Image"
+      width="250"
+      class="col"
+    ></p-image>
+    <div class="flex justify-content-center align-items-center col">
+      <ul class="text-3xl">
+        <li class="py-4">
+          <label><strong>Status: </strong></label> {{ character.status }}
+        </li>
+        <li class="py-4">
+          <label><strong>Species:</strong> </label> {{ character.species }}
+        </li>
+        <li class="py-4">
+          <label><strong>Gender: </strong></label> {{ character.gender }}
+        </li>
+      </ul>
+    </div>
+  </article>
 </p-dialog>
