fix: characters and episodes services

--- a/src/app/components/pages/episodes/episodes.component.html
+++ b/src/app/components/pages/episodes/episodes.component.html
@@ -1,7 +1,8 @@
-<section>
-    <ul>
-        <li *ngFor="let episode of episodes$ | async">
+<!-- <section>
+  <ul>
+    <li *ngFor="let episode of episodes$ | async">
             {{ episode.episode }} - {{episode.name}}
         </li>
-    </ul>
-</section>
+  </ul>
+</section> -->
+<p-listbox [options]="(episodes$ | async)!" optionLabel="name"></p-listbox>
