fix: apollo client filter to query on episodes details

--- a/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
+++ b/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
@@ -20,8 +20,10 @@
     </div>
   </div>
 </div>
-<app-episodes-details
-  [display]="displayEpisodeDetails"
-  [nameToFilter]="selectedEpisodeName"
-  (closeEpisodeDetails)="episodeDetailsClosed($event)"
-></app-episodes-details>
+<ng-template ngIf="displayEpisodeDetails">
+  <app-episodes-details
+    [display]="displayEpisodeDetails"
+    [nameToFilter]="selectedEpisodeName"
+    (closeEpisodeDetails)="episodeDetailsClosed($event)"
+  ></app-episodes-details>
+</ng-template>
