fix: episode details html

--- a/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
+++ b/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
@@ -12,8 +12,7 @@
       >
         <ng-template let-episode pTemplate="item">
           <div class="flex" (click)="openEpisodeDetails(episode.name)">
-            <div>{{ episode.episode }}</div>
-            <div>- {{ episode.name }}</div>
+            <div>{{ episode.episode }} - {{ episode.name }}</div>
           </div>
         </ng-template>
       </p-listbox>
