--- a/src/app/components/pages/episodes/episodes-details/episodes-details.component.html
+++ b/src/app/components/pages/episodes/episodes-details/episodes-details.component.html
@@ -7,8 +7,12 @@
     <div class="flex justify-content-center align-items-center col">
       <ul class="text-3xl">
         <li class="py-4">
-          <label><strong>Status: </strong></label>
+          <label><strong>Id: </strong></label>
           {{ (episodeDetails$ | async)!.id }}
+        </li>
+        <li class="py-4">
+          <label><strong>Name: </strong></label>
+          {{ (episodeDetails$ | async)!.name }}
         </li>
         <li class="py-4">
           <label><strong>Species:</strong> </label>
@@ -19,8 +23,10 @@
           {{ (episodeDetails$ | async)!.air_date }}
         </li>
         <li class="py-4">
-          <label><strong>Gender: </strong></label>
-          {{ (episodeDetails$ | async)!.characters }}
+          <label><strong>Characters: </strong></label>
+          <div
+            *ngFor="let character of (episodeDetails$ | async)!.characters"
+            > <span> > {{ character.name}}</span></div>
         </li>
       </ul>
     </div>
