fix: improving getData function service

--- a/src/app/components/pages/episodes/episodes-details/episodes-details.component.html
+++ b/src/app/components/pages/episodes/episodes-details/episodes-details.component.html
@@ -1,4 +1,4 @@
-<p-dialog
+<!-- <p-dialog
   header="{{ (episodeDetails$ | async)!.name }}"
   [(visible)]="display"
   (onHide)="closeDialog()"
@@ -31,4 +31,4 @@
       </ul>
     </div>
   </article>
-</p-dialog>
+</p-dialog> -->
