--- a/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
+++ b/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
@@ -23,6 +23,6 @@
   <app-episodes-details
     [display]="displayEpisodeDetails"
     [nameToFilter]="selectedEpisodeName"
-    (closeEpisodeDetails)="episodeDetailsClosed($event)"
+    (closeEpisodeDetails)="displayEpisodeDetails = $event"
   ></app-episodes-details>
 </ng-template>
