add: filter place holder to episode list list box

--- a/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
+++ b/src/app/components/pages/episodes/episodes-list/episodes-list.component.html
@@ -6,6 +6,7 @@
         [metaKeySelection]="false"
         [checkbox]="true"
         [filter]="true"
+        filterPlaceHolder="Search by name"
         optionLabel="name"
         [listStyle]="{ 'max-height': '450px;' }"
         [style]="{ width: '20rem' }"
