fix: character details interface and service

--- a/src/app/components/pages/characters/character-card/character-card.component.html
+++ b/src/app/components/pages/characters/character-card/character-card.component.html
@@ -32,7 +32,7 @@
 <ng-container *ngIf="display">
   <app-character-details
     (dialogClosed)="display = $event"
-    [id]="character.id"
+    [nameToFilter]="character.name"
     [display]="display"
   ></app-character-details>
 </ng-container>
