--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,19 +1,18 @@
 <section>
-    <h1>Rick and Morty GraphQl APP</h1>
+  <h1>Rick and Morty GraphQl APP</h1>
+  <div>
     <div>
-      <div>
-        <p>
-          Angular GraphQL API Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Eos aperiam consectetur expedita voluptate officia beatae omnis
-          impedit modi quisquam molestiae. Dolores consequatur dolore voluptas
-          alias corrupti distinctio cupiditate voluptatum veniam? Lorem ipsum
-          dolor sit amet, consectetur adipisicing elit. Asperiores officiis ut
-          dolores veritatis nulla eveniet. Fuga quo assumenda veritatis, aliquid
-          deleniti illo voluptatum at quia magnam. Possimus voluptates mollitia
-          tempora?
-        </p>
-      </div>
-      <span>Developed by nhussein11</span>
+      <h2>Angular GraphQL API</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aperiam
+        consectetur expedita voluptate officia beatae omnis impedit modi
+        quisquam molestiae. Dolores consequatur dolore voluptas alias corrupti
+        distinctio cupiditate voluptatum veniam? Lorem ipsum dolor sit amet,
+        consectetur adipisicing elit. Asperiores officiis ut dolores veritatis
+        nulla eveniet. Fuga quo assumenda veritatis, aliquid deleniti illo
+        voluptatum at quia magnam. Possimus voluptates mollitia tempora?
+      </p>
     </div>
-  </section>
-  
+    <span>Developed by nhussein11</span>
+  </div>
+</section>
